--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>beginner-shares</module>
         <module>beginner-swagger</module>
         <module>beginner-apache-commons</module>
+        <module>beginner-distributed</module>
     </modules>
 
     <properties>
