--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <module>beginner-mybatis</module>
         <module>beginner-shares</module>
         <module>beginner-swagger</module>
-        <module>beginner-apache-commons</module>
+        <!--<module>beginner-apache-commons</module>-->
     </modules>
 
     <properties>
@@ -83,6 +83,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+
+
 
     </dependencies>
 
