--- a/beginner-common/pom.xml
+++ b/beginner-common/pom.xml
@@ -27,9 +27,9 @@
             <version>build210</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.geronimo.bundles</groupId>
+            <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.6.8_2</version>
+            <version>1.8.9</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
